@@ -59,7 +59,7 @@ class Registration {
 		// Check to see if the admin should be notified
 		if (Config::get('admin_notify_reg')) { 
 			$body = "A new user has registered\n\n" . 
-				"The following values were entered.\n\n"
+				"The following values were entered.\n\n" . 
 				"Username:$username\nFullname:$fullname\nE-mail:$mail\n\n"; 
 			mail(Config::get('mail_from'),$subject,$body,$headers); 
 		} 
